--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles.css" type="text/css"/>
 </head>
 <body>
     <div class="toptitle">
@@ -14,17 +14,16 @@
             <h2 id="date"></h2>
             <h2 id="time"></h2>
         </div>
-        
     </div>
 
     <header class="header">
         <div class="header-left">
-            <h2>Today</h2>
+            <h2 id="current">Current Weather</h2>
             <div class="icontemp">
                 <img src = '' id="todayicon">
                 <div class="tempbox">
-                    <h2 id="temperature">25</h2>
-                    <h3 id="description">Sunny</h3>
+                    <h2 id="temperature"></h2>
+                    <h3 id="description"></h3>
                 </div>
             </div>
         </div>
